# wrap_demo

./: .gitignore  CMakeLists.txt  README.md  build.sh  setup.py
cmake/: ReplicatePythonSourceTree.cmake
lib/: CMakeLists.txt
lib/include/: include.h  struct.h
lib/src/: test_main.c
python_wrap/: main.pxd  main.pyx
